# entrance

./: .gitignore  LOGIND_INTEGRATION.md  README.md  TODO  meson.build  meson_options.txt  sonar-project.properties  test-docker-logind.sh  test-docker-spawny-fix.sh
.github/workflows/: docker_build.yml
data/: entrance-autologin  entrance.conf.in  entrance.pam.d  meson.build
data/themes/default/: default.edc  meson.build
selinux/: Makefile  README.md  entrance.fc  entrance.pp  entrance.te  meson.build  selinux
selinux/tmp/: entrance.tmp
src/daemon/: entrance.c  entrance.h  entrance_action.c  entrance_config.c  entrance_config.h  entrance_history.c  entrance_history.h  entrance_image.c  entrance_logind.c  entrance_logind.h  entrance_pam.c  entrance_pam.h  entrance_server.c  entrance_session.c  entrance_session.h  entrance_session_utils.c  entrance_session_utils.h  entrance_theme.c  entrance_xserver.c  entrance_xserver.h  meson.build
src/event/: entrance_event.c  entrance_event.h
src/tests/daemon/: entrance_pam_tests.c  entrance_session_tests.c  entrance_tests.c  entrance_tests.h  meson.build
tests/: run-tests.sh
utils/: build_in_docker.sh  cleanup.sh  create_xsession.sh  docker_entrance.sh  entrance_xephyr.sh  local_build_docker.sh
