option('cachedir',
       type       : 'string',
       value      : '/var/cache',
       description: 'Path to cache dir, entrance subdir will be appended')
option('edje-cc',
       type       : 'string',
       description: 'A path to a edje_cc. Defaults to system edje_cc')
option('ekbd',
       type       : 'boolean',
       value      : false,
       description: 'Enable support for virtual keyboard')
option('logind',
       type       : 'boolean',
       value      : false,
       description: 'Enable support for systemd logind or elogind')
option('systemd',
       type       : 'boolean',
       value      : false,
       description: 'Install systemd service file')
option('nls',
	type: 'boolean',
	value: true,
	description: 'Enable localization (default=true)')
option('pam',
       type       : 'boolean',
       value      : true,
       description: 'Enable support for pam (default=true)')
option('selinux',
       type       : 'boolean',
       value      : false,
       description: 'Build and install SELinux policy module')
